@@ -1,3 +1,4 @@
 add_subdirectory(dynamic-security)
 add_subdirectory(persist-sqlite)
 add_subdirectory(examples)
+add_subdirectory(sparkplug-aware)
