@@ -1,0 +1,8 @@
+# Mosquitto Sparkplug Aware
+
+This plugin implements the requirements of the Sparkplug 3.0 specification
+"awareness".
+
+It is not tested with the official TCK, because that is only capable of testing
+one brand of broker, and hence it is not possible to validate any other broker.
+See https://github.com/eclipse-sparkplug/sparkplug/issues/478
