@@ -1,0 +1,3 @@
+listener 1883
+allow_anonymous true
+plugin ./mosquitto_sparkplug_aware.so
