@@ -1,0 +1,2 @@
+#VG="valgrind --log-file=vglog"
+${VG} ../../src/mosquitto -c test.conf -v
